--- a/app/src/main/res/layout/codyadd.xml
+++ b/app/src/main/res/layout/codyadd.xml
@@ -1,133 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/post_main"
+    android:fillViewport="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/codyadd_main">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:textAlignment="center"
-        android:textSize="30dp"
-        android:text="코디등록"/>
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="499dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="30dp">
 
-        <ListView
-            android:id="@+id/codylist"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="520dp" />
+            android:layout_height="30dp" >
 
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="38dp"
+                android:id="@+id/btnBack_codyadd"
+                android:background="#00ff0000"
+                android:src="@drawable/arrow_back"
+                android:layout_marginLeft="-10dp"
+                android:layout_marginTop="-10dp"/>
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="350dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center">
+            <TextView
+                android:layout_marginTop="-10dp"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:layout_width="315dp"
+                android:layout_height="40dp"
+                android:text="코디등록"/>
 
-        <CheckBox
-            android:id="@+id/weatherSelect_spring"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:text="봄"
-            android:textAlignment="center"
-            android:background="#f1f3f5" />
+        </LinearLayout>
 
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:text="여름"
-            android:textAlignment="center"
-            android:background="#f1f3f5"
-            android:id="@+id/weatherSelect_summer"/>
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="가을"
-            android:layout_weight="1"
-            android:button="@null"
-            android:textAlignment="center"
-            android:background="#f1f3f5"
-            android:id="@+id/weatherSelect_fall" />
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="겨울"
-            android:layout_weight="1"
-            android:button="@null"
-            android:textAlignment="center"
-            android:background="#f1f3f5"
-            android:id="@+id/weatherSelect_winter" />
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="전체"
-            android:layout_weight="1"
-            android:button="@null"
-            android:textAlignment="center"
-            android:background="#f1f3f5"
-            android:id="@+id/weatherSelect_communal"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-        <TextView
+        <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:text="코디명: "/>
-        <EditText
-            android:id="@+id/codyadd_title"
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="옷장 위치"
-            android:textSize="15dp" />
+            android:rowCount="4"
+            android:columnCount="2"
+            android:layout_gravity="center">
 
-        <Spinner
-            android:id="@+id/cody_location"
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="30dp"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:background="#FFFFFF"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="상의"/>
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:background="#FFFFFF"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="하의"/>
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:background="#FFFFFF"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="신발"/>
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:background="#FFFFFF"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="외투"/>
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:background="#FFFFFF"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="속옷"/>
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:background="#FFFFFF"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="양말"/>
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:background="#FFFFFF"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="액세서리"/>
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:background="#FFFFFF"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="가방"/>
+        </GridLayout>
+
+
+        <LinearLayout
+            android:layout_width="350dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center">
+
+
+
+            <CheckBox
+                android:id="@+id/weatherSelect_spring"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:button="@null"
+                android:text="봄"
+                android:textAlignment="center"
+                android:background="#f1f3f5" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:button="@null"
+                android:text="여름"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_summer"/>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="가을"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_fall" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="겨울"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_winter" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="전체"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_communal"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_gravity="center">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:text="코디명: "/>
+            <EditText
+                android:id="@+id/codyadd_title"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="옷장 위치"
+                android:textSize="15dp" />
+
+            <Spinner
+                android:id="@+id/cody_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
         <Button
-            android:id="@+id/codyadd_addbtn"
-            android:layout_width="80dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/codyadd_post"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:text="등록"/>
-        <Button
-            android:id="@+id/codyadd_canclebtn"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:text="취소"/>
     </LinearLayout>
 
 
-</LinearLayout>
+</ScrollView>
