--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,14 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fillViewport="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <!-- // 이미지 버튼을 클릭했을 때 이동되는 xml 코드 -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="30dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp" >
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="38dp"
+                android:id="@+id/btnBack_post"
+                android:background="#00ff0000"
+                android:src="@drawable/arrow_back"
+                android:layout_marginLeft="-10dp"
+                android:layout_marginTop="-10dp"/>
+
+
+            <TextView
+                android:layout_marginTop="-10dp"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:layout_width="315dp"
+                android:layout_height="40dp"
+                android:text="상세정보"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            android:layout_gravity="right"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/detail_Modify"
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="2"
+                android:drawableLeft="@drawable/edit"
+                android:text="수정" />
+
+            <Button
+                android:id="@+id/detail_delete"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="2"
+                android:drawableLeft="@drawable/delete"
+                android:text="삭제" />
+
+        </LinearLayout>
 
         <ImageView
             android:layout_width="wrap_content"
@@ -16,6 +70,13 @@
             android:id="@+id/detail_c_img"
             android:layout_marginBottom="16dp"
             android:layout_gravity="center" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="옷장 위치"
+            android:textSize="20dp" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -25,6 +86,12 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="옷 이름"
+            android:textSize="20dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,22 +100,12 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/detail_c_type"
-            android:text="옷 종류"
-            android:textSize="18dp"
-            android:layout_marginBottom="8dp"/>
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/detail_c_size"
-            android:text="사이즈"
-            android:textSize="18dp"
-            android:layout_marginBottom="8dp"/>
-
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="옷 브랜드"
+            android:textSize="20dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,14 +114,62 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <EditText
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/detail_c_tag"
-            android:text="태그"
-            android:textSize="18dp"
-            android:layout_marginBottom="8dp"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="옷 종류"
+                android:textSize="20dp" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/detail_c_type"
+                android:text="옷 종류"
+                android:textSize="18dp"
+                android:layout_marginBottom="8dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="옷 사이즈"
+                android:textSize="20dp" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/detail_c_size"
+                android:text="사이즈"
+                android:textSize="18dp"
+                android:layout_marginBottom="8dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="50dp" >
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/detail_c_tag"
+                android:text="태그"
+                android:textSize="18dp"
+                android:layout_marginBottom="8dp"/>
+        </LinearLayout>
 
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="메모"
+            android:textSize="20dp" />
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,7 +177,6 @@
             android:text="메모"
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
-
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,7 +184,6 @@
             android:text="날짜"
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
-
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,20 +192,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <!--
-        <Button
-            android:id="@+id/detail_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="수정 / 저장하기" />
 
-        <Button
-            android:id="@+id/detail_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="옷 삭제하기" />
-        -->
     </LinearLayout>
+
 </ScrollView>
