--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -60,7 +60,7 @@
                 <Switch
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:id="@+id/switchDark_thema"/>
+                    android:id="@+id/switchTheme"/>
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
