--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,13 +36,13 @@
 
                         <ImageButton
                             android:id="@+id/btnWeather"
-                            android:layout_width="70dp"
-                            android:layout_height="match_parent"
+                            android:layout_width="78dp"
+                            android:layout_height="66dp"
                             android:layout_marginLeft="13dp"
                             android:background="#00ff0000"
                             android:padding="0dp"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/sun" />
+                            android:src="@drawable/loading" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
@@ -70,7 +70,7 @@
                                 android:id="@+id/timeNow"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:text="오전 10:00" />
+                                android:text="   로딩중" />
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
@@ -80,16 +80,17 @@
                     android:layout_weight="1"
                     android:layout_marginLeft="13dp"
                     android:layout_marginRight="32dp">
+
                     <Button
                         android:id="@+id/refresh"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:background="#00ff0000"
                         android:drawableLeft="@drawable/location"
                         android:drawablePadding="-7dp"
-                        android:text="성남시 복정동"
-                        android:textSize="14dp"
-                        android:background="#00ff0000"/>
+                        android:text="주소 출력"
+                        android:textSize="14dp" />
                     <ImageButton
                         android:id="@+id/btnLocation"
                         android:layout_width="0dp"
