--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -36,13 +36,19 @@
 
         </LinearLayout>
 
-        <ImageButton
+        <ImageView
             android:id="@+id/c_img_post"
             android:layout_marginTop="20dp"
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_gravity="center"
-            android:background="@drawable/clothes"/>
+            android:src="@drawable/clothes"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/btnbtn"/>
 
         <TextView
             android:layout_marginTop="10dp"
@@ -217,6 +223,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="등록"/>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
     </LinearLayout>
 
 </ScrollView>
