1. 오류 수정 2. 코디 위치 스피너 추가 3. 코디 위치 기본값 생성

--- a/app/src/main/res/layout/cody.xml
+++ b/app/src/main/res/layout/cody.xml
@@ -130,7 +130,7 @@
             android:src="@drawable/modify" />
 
         <Spinner
-            android:id="@+id/cody_c_loc"
+            android:id="@+id/main_cod_loc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollbarSize="100dp"
