--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -36,19 +36,15 @@
 
         </LinearLayout>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/c_img_post"
             android:layout_marginTop="20dp"
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_gravity="center"
-            android:src="@drawable/clothes"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:id="@+id/btnbtn"/>
+            android:src="@drawable/baseline_add_box_24"
+            android:background="#00ff0000"
+            android:scaleType="fitCenter"/>
 
         <TextView
             android:layout_marginTop="10dp"
