1. 상세정보 정보 값 제대로 나오게 수정 완료 2. 상세정보에서 옷 사진 수정 기능 추가 2.1 수정버튼 누르기 전엔 이미지버튼 비활성화 2.2 옷 사진 수정 완료하면 수정버튼이 안 눌려져 있는 초기 화면으로 돌아가는데, 추후 수정하기 버튼 눌려있는 상태로 변경되게 수정 예정 3. 상세정보 보기 구현 완료되었으므로 옷 수정 및 삭제 기능 추가

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -63,12 +63,15 @@
 
         </LinearLayout>
 
-        <ImageView
+        <ImageButton
+            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_img"
             android:layout_marginBottom="16dp"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:background="#00ff0000"
+            android:scaleType="fitCenter"/>
 
         <TextView
             android:layout_marginTop="10dp"
@@ -130,6 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:visibility="invisible"
+                android:enabled="false"
                 android:text=""
                 android:hint="종류 입력"/>
 
@@ -156,6 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:visibility="invisible"
+                android:enabled="false"
                 android:text=""
                 android:hint="사이즈 입력"/>
 
