불필요한 부분 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -182,9 +182,7 @@
             android:id="@+id/gl_main"
             tools:background="#00ff0000"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:rowCount="3"
-            android:columnCount="100" >
+            android:layout_height="wrap_content" >
         </GridLayout>
     </ScrollView>
 
