--- a/app/src/main/res/layout/addmenu.xml
+++ b/app/src/main/res/layout/addmenu.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="11"
@@ -20,11 +20,7 @@
             android:layout_height="45dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp" >
-            <View
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="8"
-                android:background="#FFFFFF"/>
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,19 +60,17 @@
                     android:textSize="25dp" />
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center" >
         <ImageButton
             android:id="@+id/addMenuClose"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/baseline_cancle_circle_24"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/addcircle"
             android:scaleType="centerCrop"
-            android:paddingTop="10dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="306.3dp"
             android:background="#00ff0000"/>
-    </LinearLayout>
+    </FrameLayout>
+
+
 
 </LinearLayout>
