--- a/app/src/main/res/layout/cody.xml
+++ b/app/src/main/res/layout/cody.xml
@@ -171,59 +171,43 @@
         android:layout_height="1dp"
         android:background="#000000" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9"
-        android:fillViewport="true">
-
-        <GridLayout
-            android:id="@+id/gl_cody"
-            tools:background="#00ff0000"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </GridLayout>
-
-    </ScrollView>
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" >
+        android:layout_weight="10" >
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/sv_main"
+            android:fillViewport="true" >
 
-            <Button
-                android:id="@+id/btnCloset"
+            <GridLayout
+                android:id="@+id/gl_cody"
+                tools:background="#00ff0000"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#00ff00"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textSize="25dp"
-                android:text="옷장" />
+                android:layout_height="300dp" >
+            </GridLayout>
+        </ScrollView>
 
-            <Button
-                android:id="@+id/btnCody"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#00ff00"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textSize="25dp"
-                android:text="코디" />
-        </LinearLayout>
-
-        <android.widget.Button
+        <ImageButton
             android:id="@+id/btnAdd"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="top|center"
-            android:background="@drawable/baseline_add_circle_24" />
+            android:layout_marginTop="520dp"
+            android:paddingBottom="40dp"
+            android:background="@drawable/addcircle"
+            android:elevation="1dp"/>
     </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        app:menu="@menu/main_menu"
+        android:background="#fff"
+        app:itemIconTint="@drawable/navi_icon_color"
+        app:itemTextColor="@drawable/navi_icon_color" />
 </LinearLayout>
