--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/btnCloset"
-        android:icon="@drawable/closet"
+        android:icon="@drawable/closetimg"
         android:enabled="true"
         android:title="옷장" />
 
