화면 비율, 하단 + 버튼 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -196,19 +196,21 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="top|center"
-            android:layout_marginTop="520dp"
+            android:layout_marginTop="610dp"
             android:paddingBottom="40dp"
+            android:translationZ="500dp"
             android:background="@drawable/addcircle"
-            android:elevation="1dp"/>
+            android:elevation="-50dp"/>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_gravity="bottom"
+            app:menu="@menu/main_menu"
+            android:background="#fff"
+            app:itemIconTint="@drawable/navi_icon_color"
+            app:itemTextColor="@drawable/navi_icon_color" />
+
     </FrameLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        app:menu="@menu/main_menu"
-        android:background="#fff"
-        app:itemIconTint="@drawable/navi_icon_color"
-        app:itemTextColor="@drawable/navi_icon_color" />
-
 </LinearLayout>
