--- a/app/src/main/res/layout/codyadd.xml
+++ b/app/src/main/res/layout/codyadd.xml
@@ -36,91 +36,193 @@
 
         </LinearLayout>
 
+        <ImageButton
+            android:layout_marginTop="20dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:id="@+id/add_cod_thumb"
+            android:layout_marginBottom="8dp"
+            android:layout_gravity="center"
+            android:src="@drawable/baseline_add_box_24"
+            android:background="#00ff0000"
+            android:scaleType="fitCenter"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#00ff0000"
+            android:layout_columnWeight="1"
+            android:textAlignment="center"
+            android:layout_marginBottom="15dp"
+            android:textColor="#000000"
+            android:textSize="25dp"
+            android:text="대표 이미지" />
+
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:rowCount="4"
+            android:rowCount="8"
             android:columnCount="2"
             android:layout_gravity="center">
 
-            <Button
+            <ImageButton
+                android:id="@+id/detail_cod_index1"
                 android:layout_width="150dp"
-                android:layout_height="30dp"
+                android:layout_height="150dp"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
+                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:drawableTop="@drawable/baseline_add_box_24"
+                android:src="@drawable/baseline_add_box_24"
                 android:text="상의"/>
 
-            <Button
+            <ImageButton
+                android:id="@+id/detail_cod_index2"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
+                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:drawableTop="@drawable/baseline_add_box_24"
+                android:src="@drawable/baseline_add_box_24"
                 android:text="하의"/>
 
-            <Button
-                android:layout_width="150dp"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#ffffff"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:background="#FFFFFF"
-                android:drawableTop="@drawable/baseline_add_box_24"
-                android:text="신발"/>
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:text="상의" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:layout_columnWeight="1"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:text="하의" />
 
-            <Button
+            <ImageButton
+                android:id="@+id/detail_cod_index3"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
+                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:drawableTop="@drawable/baseline_add_box_24"
-                android:text="외투"/>
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:background="#FFFFFF"
-                android:drawableTop="@drawable/baseline_add_box_24"
-                android:text="속옷"/>
+                android:src="@drawable/baseline_add_box_24" />
 
-            <Button
+            <ImageButton
+                android:id="@+id/detail_cod_index4"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
+                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:drawableTop="@drawable/baseline_add_box_24"
-                android:text="양말"/>
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:background="#FFFFFF"
-                android:drawableTop="@drawable/baseline_add_box_24"
-                android:text="액세서리"/>
+                android:src="@drawable/baseline_add_box_24" />
 
-            <Button
-                android:layout_width="150dp"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:layout_columnWeight="1"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:text="신발" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:layout_columnWeight="1"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:text="외투" />
+
+            <ImageButton
+                android:id="@+id/detail_cod_index5"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
+                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:drawableTop="@drawable/baseline_add_box_24"
-                android:text="가방"/>
+                android:src="@drawable/baseline_add_box_24"/>
+
+            <ImageButton
+                android:id="@+id/detail_cod_index6"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:scaleType="fitCenter"
+                android:background="#FFFFFF"
+                android:src="@drawable/baseline_add_box_24"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:layout_columnWeight="1"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:text="속옷" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:layout_columnWeight="1"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:text="양말" />
+
+            <ImageButton
+                android:id="@+id/detail_cod_index7"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:scaleType="fitCenter"
+                android:background="#FFFFFF"
+                android:src="@drawable/baseline_add_box_24"/>
+
+            <ImageButton
+                android:id="@+id/detail_cod_index8"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:scaleType="fitCenter"
+                android:background="#FFFFFF"
+                android:src="@drawable/baseline_add_box_24"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:layout_columnWeight="1"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:text="액세서리" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:layout_columnWeight="1"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:text="가방" />
         </GridLayout>
-
 
         <LinearLayout
             android:layout_width="350dp"
             android:layout_height="30dp"
             android:layout_gravity="center">
-
-
 
             <CheckBox
                 android:id="@+id/weatherSelect_spring"
@@ -190,7 +292,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="옷장 위치"
+                android:text="코디 위치"
                 android:textSize="15dp" />
 
             <Spinner
