검색, 코디 탭 추가

--- a/app/src/main/res/layout/cody.xml
+++ b/app/src/main/res/layout/cody.xml
@@ -66,6 +66,7 @@
                             android:layout_height="0dp"
                             android:layout_weight="1">
                             <TextView
+                                android:id="@+id/timeNow"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:text="오전 10:00"
