--- a/app/src/main/res/layout/cody_detail.xml
+++ b/app/src/main/res/layout/cody_detail.xml
@@ -81,6 +81,7 @@
             android:layout_gravity="center">
 
             <Button
+                android:id="@+id/detail_cod_top"
                 android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_columnWeight="1"
@@ -90,6 +91,7 @@
                 android:text="상의"/>
 
             <Button
+                android:id="@+id/detail_cod_bottom"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
@@ -99,6 +101,7 @@
                 android:text="하의"/>
 
             <Button
+                android:id="@+id/detail_cod_shoes"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
@@ -108,6 +111,7 @@
                 android:text="신발"/>
 
             <Button
+                android:id="@+id/detail_cod_outer"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
@@ -115,7 +119,9 @@
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
                 android:text="외투"/>
+
             <Button
+                android:id="@+id/detail_cod_underwear"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
@@ -125,6 +131,7 @@
                 android:text="속옷"/>
 
             <Button
+                android:id="@+id/detail_cod_socks"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
@@ -132,7 +139,9 @@
                 android:background="#FFFFFF"
                 android:drawableTop="@drawable/baseline_add_box_24"
                 android:text="양말"/>
+
             <Button
+                android:id="@+id/detail_cod_accessory"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
@@ -142,6 +151,7 @@
                 android:text="액세서리"/>
 
             <Button
+                android:id="@+id/detail_cod_bag"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
